--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,3 +1,23 @@
 .App {
   text-align: center;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Trebuchet MS', sans-serif;
+  color: cyan;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 40px;
+  font-weight: bolder;
+}
+
+label {
+  padding: 10px;
+}
+
+select {
+  color: cyan;
 }
