--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -19,5 +19,11 @@ label {
 }
 
 select {
-  color: cyan;
+  color: yellow;
+  background-color: indigo;
+}
+
+img {
+  max-width: 90%;
+  height: auto;
 }
